--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
     "react-spinners": "^0.15.0",
+    "recharts": "^2.15.2",
     "redux": "^5.0.1",
     "tailwindcss": "^4.0.17"
   },
