--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.4",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
