--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@fontsource/montserrat-alternates": "^5.2.5",
+    "@mantine/core": "^7.17.5",
+    "@mantine/hooks": "^7.17.5",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.4",
